Fixed horizontal overflow

--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ body {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	font-family: 'Open Sans', sans-serif;
+	overflow-x: hidden;
 }
 
 div#home {
